--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Akupunktura Złotów</title>
+    <title>Akupunktura - Medycyna Chińska</title>
 
 
     <link rel="stylesheet" href="dist/css/style.min.css">
@@ -64,10 +64,32 @@
                         <a href="#contact"><li class="nav__nav-item">Kontakt</li></a>
                     </ul>
                 </div>
-                <button class="nav__burger-btn"></button>
+
+                <button class="nav__burger-btn">
+                    <div class="nav__burger-btn-container">
+                        <span class="nav__burger-btn-items nav__burger-btn-span1"></span>
+                        <span class="nav__burger-btn-items nav__burger-btn-span2"></span>
+                        <span class="nav__burger-btn-items nav__burger-btn-span3"></span>
+                    </div>
+                </button>
             </div>
         </div>
-</nav>
+
+        <div class="nav__mobile-menu">
+            <div class="nav__mobile-menu-container">
+                <ul class="nav__mobile-menu-items">
+                    <a href="#" class="nav__mobile-menu-link"><li class="nav__mobile-menu-items-content">O mnie</li></a>
+                    <a href="#" class="nav__mobile-menu-link"><li class="nav__mobile-menu-items-content">Oferta</li></a>
+                    <a href="#" class="nav__mobile-menu-link"><li class="nav__mobile-menu-items-content">Cennik</li></a>
+                    <a href="#" class="nav__mobile-menu-link"><li class="nav__mobile-menu-items-content">Opinie</li></a>
+                    <a href="#" class="nav__mobile-menu-link"><li class="nav__mobile-menu-items-content">Blog</li></a>
+                    <a href="#" class="nav__mobile-menu-link"><li class="nav__mobile-menu-items-content">Kontakt</li></a>
+                </ul>
+            </div>
+        </div>
+    </nav>
+    
+
     <header class="header">
 
     </header>
