--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
                                 <a href="#dietetics" class="nav__dropdown-menu-offer-items"><li class="nav__dropdown-menu-li">dietetyka</li></a>
                                 <a href="#herbal-medicine" class="nav__dropdown-menu-offer-items"><li class="nav__dropdown-menu-li">ziołolecznictwo</li></a>
                                 <a href="#chinese-medicine" class="nav__dropdown-menu-offer-items"><li class="nav__dropdown-menu-li">medycyna chińska</li></a>
-                                <a href="#training" target="_blank" class="nav__dropdown-menu-offer-items"><li class="nav__dropdown-menu-li">szkolenia<img src="dist/img/icon/external-link.png" alt="" class="nav__external-link-icon"></li></a>
+                                <a href="#trainings" target="_blank" class="nav__dropdown-menu-offer-items"><li class="nav__dropdown-menu-li">szkolenia<img src="dist/img/icon/external-link.png" alt="" class="nav__external-link-icon"></li></a>
                             </ul>
                         </div>
                         <a href="#prices"> <li class="nav__nav-item">Cennik</li></a>
@@ -78,18 +78,26 @@
         <div class="nav__mobile-menu">
             <div class="nav__mobile-menu-container">
                 <ul class="nav__mobile-menu-items">
-                    <a href="#" class="nav__mobile-menu-link"><li class="nav__mobile-menu-items-content">O mnie</li></a>
-                    <a href="#" class="nav__mobile-menu-link"><li class="nav__mobile-menu-items-content">Oferta</li></a>
-                    <a href="#" class="nav__mobile-menu-link"><li class="nav__mobile-menu-items-content">Cennik</li></a>
-                    <a href="#" class="nav__mobile-menu-link"><li class="nav__mobile-menu-items-content">Opinie</li></a>
-                    <a href="#" class="nav__mobile-menu-link"><li class="nav__mobile-menu-items-content">Blog</li></a>
-                    <a href="#" class="nav__mobile-menu-link"><li class="nav__mobile-menu-items-content">Kontakt</li></a>
+                    <a href="#aboutme" class="nav__mobile-menu-link"><li class="nav__mobile-menu-items-content mobile-nav-links1">O mnie</li></a>
+                    <a href="#offer" class="nav__mobile-menu-link "><li class="nav__mobile-menu-items-content mobile-menu-offer-item">Oferta<img class="nav__arrow-icon nav_arrow-icon-mobile" src='dist/img/icon/arrow-icon-bottom.png' alt=""></li></a>
+                    <a href="#prices" class="nav__mobile-menu-link"><li class="nav__mobile-menu-items-content mobile-nav-links2">Cennik</li></a>
+                    <a href="#opinion" class="nav__mobile-menu-link"><li class="nav__mobile-menu-items-content mobile-nav-links3">Opinie</li></a>
+                    <a href="#blog" class="nav__mobile-menu-link"><li class="nav__mobile-menu-items-content blog-item mobile-nav-links4">Blog</li></a>
+                    <a href="#contact" class="nav__mobile-menu-link"><li class="nav__mobile-menu-items-content mobile-nav-links5">Kontakt</li></a>
                 </ul>
+            </div>
+            <div class="nav__mobile-menu-container-offer-submenu">
+                <ul class="nav__mobile-menu-items submenu-UL-items">
+                    <a href="#acupuncture" class="nav__mobile-menu-link"><li class="nav__mobile-menu-items-content-submenu submenu-LI-link1">Akupunktura</li></a>
+                    <a href="#dietetics" class="nav__mobile-menu-link"><li class="nav__mobile-menu-items-content-submenu submenu-LI-link2">Dietetyka</li></a>
+                    <a href="#herbal-medicine" class="nav__mobile-menu-link"><li class="nav__mobile-menu-items-content-submenu submenu-LI-link3">Ziołolecznictwo</li></a>
+                    <a href="#chinese-medicine" class="nav__mobile-menu-link"><li class="nav__mobile-menu-items-content-submenu submenu-LI-link4">Medycyna Chińska</li></a>
+                    <a href="#trainings" class="nav__mobile-menu-link" target="_blank"><li class="nav__mobile-menu-items-content-submenu submenu-LI-link5">Szkolenia <img src="dist/img/icon/external-link.png" alt="" class="nav__external-link-icon"></li></a>
+                </ul>
+                <button class="nav__mobile-menu-items-back-btn"><img src="dist/img/icon/back-btn.png" alt="" class="nav__back-icon">Wstecz</button>
             </div>
         </div>
     </nav>
-    
-
     <header class="header">
 
     </header>
