--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         <div class="nav__media-bar-conitainer">
             <div class="nav__center-social-media-icon nav__center-social-media-icon-space">
             <a href="tel:+48512466493" class="nav__link-phone">
-                <p class="nav__media-bar-text"><img class="nav__phone-icon" src="dist/img/icon/phone-color.png" alt="Ikona telefonu">+48-512-466-493</p>
+                <p class="nav__media-bar-text"><img class="nav__phone-icon" src="dist/img/icon/phone-color.png" alt="Ikona telefonu">+48 512 466 493</p>
             </a>
             <a href="mailto:akupunktura.dietetyka@gmail.com" class="nav__link-email">
                 <p class="nav__media-bar-text nav__media-text-space"><img class="nav__email-icon" src="dist/img/icon/email-color.png" alt="Ikona email">akupunktura.dietetyka@gmail.com</p>
@@ -41,8 +41,9 @@
     </div>
     <div class="wrapper">
         <a href="#">
-            <div class="nav__logo-bg">
-            </div>
+            <img src="dist/img/Medycyna-chinska-logo-mobile.png" alt="Logo Medycyna-chinska" class="nav__logo-bg">
+            <!-- <div class="nav__logo-bg"> -->
+            <!-- </div> -->
         </a>
             <div class="nav__menu-container">
                 <div class="nav__desktop-nav">
@@ -79,7 +80,7 @@
             <div class="nav__mobile-menu-container">
                 <ul class="nav__mobile-menu-items">
                     <a href="#aboutme" class="nav__mobile-menu-link"><li class="nav__mobile-menu-items-content mobile-nav-links1">O mnie</li></a>
-                    <a href="#offer" class="nav__mobile-menu-link "><li class="nav__mobile-menu-items-content mobile-menu-offer-item">Oferta<img class="nav__arrow-icon nav_arrow-icon-mobile" src='dist/img/icon/arrow-icon-bottom.png' alt=""></li></a>
+                    <a href="#offer" class="nav__mobile-menu-link "><li class="nav__mobile-menu-items-content mobile-menu-offer-item">Oferta<img class="nav__arrow-icon nav_arrow-icon-mobile" src='dist/img/icon/arrow-icon-right.png' alt=""></li></a>
                     <a href="#prices" class="nav__mobile-menu-link"><li class="nav__mobile-menu-items-content mobile-nav-links2">Cennik</li></a>
                     <a href="#opinion" class="nav__mobile-menu-link"><li class="nav__mobile-menu-items-content mobile-nav-links3">Opinie</li></a>
                     <a href="#blog" class="nav__mobile-menu-link"><li class="nav__mobile-menu-items-content blog-item mobile-nav-links4">Blog</li></a>
@@ -99,18 +100,19 @@
         </div>
     </nav>
     <header class="header">
-
-    </header>
-
+    <div class="header__box">
+        <h1 class="header__h1-head">Akupunktura, dietetyka i ziołolecznictwo</h1>
+        <p class="header__paragraph">Medycyna chińska</p>
+    </div>
+</header>
     <main class="main">
-        <section>
+    <section>
 
-        </section>
-    </main>
-
+    </section>
+</main>
     
 
     <script src="dist/js/main.min.js"></script>
 </body>
 
-</html>
+</html> 
