--- a/trainings.html
+++ b/trainings.html
@@ -1,4 +1,18 @@
-<nav class="nav">
+<!DOCTYPE html>
+<html lang="pl">
+
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Szkolenia - Medycyna Chińska</title>
+
+
+    <link rel="stylesheet" href="dist/css/style.min.css">
+</head>
+
+<body>
+    <nav class="nav">
     <div class="nav__media-bar">
         <div class="nav__media-bar-conitainer">
             <div class="nav__center-social-media-icon nav__center-social-media-icon-space">
@@ -85,3 +99,22 @@
             </div>
         </div>
     </nav>
+    <header class="header">
+    <div class="header__box">
+        <h1 class="header__h1-head">Akupunktura, dietetyka i ziołolecznictwo</h1>
+        <p class="header__paragraph">Medycyna chińska</p>
+    </div>
+</header>
+
+    <main class="main">
+        <section>
+
+        </section>
+    </main>
+
+    
+
+    <script src="dist/js/main.min.js"></script>
+</body>
+
+</html>
