--- a/index.html
+++ b/index.html
@@ -42,8 +42,6 @@
     <div class="wrapper">
         <a href="#">
             <img src="dist/img/Medycyna-chinska-logo-mobile.png" alt="Logo Medycyna-chinska" class="nav__logo-bg">
-            <!-- <div class="nav__logo-bg"> -->
-            <!-- </div> -->
         </a>
             <div class="nav__menu-container">
                 <div class="nav__desktop-nav">
@@ -103,6 +101,12 @@
     <div class="header__box">
         <h1 class="header__h1-head">Akupunktura, dietetyka i ziołolecznictwo</h1>
         <p class="header__paragraph">Medycyna chińska</p>
+        <button class="header__button">
+            <span class="header__button-text">UMÓW WIZYTĘ</span>
+            <div class="header__vertical-bar">
+            </div>
+            <img src="dist/img/icon/iconmonstr-arrow-right.png" alt="">
+        </button>
     </div>
 </header>
     <main class="main">
