--- a/trainings.html
+++ b/trainings.html
@@ -17,7 +17,7 @@
         <div class="nav__media-bar-conitainer">
             <div class="nav__center-social-media-icon nav__center-social-media-icon-space">
             <a href="tel:+48512466493" class="nav__link-phone">
-                <p class="nav__media-bar-text"><img class="nav__phone-icon" src="dist/img/icon/phone-color.png" alt="Ikona telefonu">+48 512 466 493</p>
+                <p class="nav__media-bar-text"><img class="nav__phone-icon" src="dist/img/icon/phone-color.png" alt="Ikona telefonu">+48&nbsp;512&nbsp;466&nbsp;493</p>
             </a>
             <a href="mailto:akupunktura.dietetyka@gmail.com" class="nav__link-email">
                 <p class="nav__media-bar-text nav__media-text-space"><img class="nav__email-icon" src="dist/img/icon/email-color.png" alt="Ikona email">akupunktura.dietetyka@gmail.com</p>
@@ -98,15 +98,19 @@
         </div>
     </nav>
     <header class="header">
+
     <div class="header__box">
-        <h1 class="header__h1-head">Akupunktura, dietetyka i ziołolecznictwo</h1>
+        <h1 class="header__h1-head jol">Akupunktura, dietetyka i ziołolecznictwo</h1>
         <p class="header__paragraph">Medycyna chińska</p>
-        <button class="header__button">
+
+
+        <a href="#contact" class="header__button">
             <span class="header__button-text">UMÓW WIZYTĘ</span>
             <div class="header__vertical-bar">
             </div>
             <img src="dist/img/icon/iconmonstr-arrow-right.png" alt="">
-        </button>
+        </a>
+
     </div>
 </header>
 
