--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
             </div>
         </div>
     </div>
-    <div class="wrapper">
+    <div class="wrapper-nav">
         <a href="#">
             <img src="dist/img/Medycyna-chinska-logo-mobile.png" alt="Logo Medycyna-chinska" class="nav__logo-bg">
         </a>
@@ -119,14 +119,45 @@
             <div class="rings__circle rings__circle-one"></div>
             <div class="rings__circle rings__circle-two"></div>
             <div class="rings__circle rings__circle-three"></div>
-    </div>
+        </div>
     </section>
 
-    <section id="aboutme" class="aboutme">
-        <div class="wrapper">
+    <section class="aboutme" id="aboutme">
+        <div class="aboutme__box1">
+            <div class="aboutme__title-center">
+                <h2 class="h2-title-sections">O mnie</h2>
+            </div>
+            <div class="wrapper">
+                <p class="aboutme__text">Moja wspaniała przygoda z Medycyną Chińską rozpoczęła się w 2008 roku.
+                    Początkowo tematem moich zainteresowań było wschodnie podejście do tematu żywienia i diety. W
+                    Medycynie Chińskiej przyciągnęło mnie holistyczne i indywidualne podejście do każdej osoby. W 2012
+                    roku postanowiłam poszerzyć swoją wiedzę na kursie Dietetyki według Tradycyjnej Medycyny Chińskiej.
+                    W roku 2013 podjęłam naukę akupunktury w Szkole Akupunktury Tradycyjnej w Bydgoszczy, aby rozwinąć
+                    swoją wiedzę w kolejnym obszarze TCM.</p>
+            </div>
 
-            <h2 class="h2-section">O mnie</h2>
         </div>
+        <div class="aboutme__box-sentence">
+            <div class="wrapper">
+                <div class="aboutme__box-sentence-inside">
+                    <h3 class="aboutme__text-sentence">Medycyna Chińska jest moją pasją, którą stale rozwijam.
+                        Nieustannie pogłębiam swoją wiedzę na
+                        kursach i szkoleniach.</h3>
+                    </div>
+                </div>
+                <img src="dist/img/aboutme-small.png" alt="" class="aboutme__my-img-small">
+                <img src="dist/img/aboutme-big.png" alt="" class="aboutme__my-img-big">
+        </div>
+
+        <div class="aboutme__education">
+            <div class="wrapper">
+
+                <h3>Edukcja</h3>
+            </div>
+
+
+        </div>
+
 
 
     </section>
