--- a/trainings.html
+++ b/trainings.html
@@ -39,7 +39,7 @@
             </div>
         </div>
     </div>
-    <div class="wrapper">
+    <div class="wrapper-nav">
         <a href="#">
             <img src="dist/img/Medycyna-chinska-logo-mobile.png" alt="Logo Medycyna-chinska" class="nav__logo-bg">
         </a>
