--- a/index.html
+++ b/index.html
@@ -142,7 +142,9 @@
                 <div class="aboutme__box-sentence-inside">
                     <h3 class="aboutme__text-sentence">Medycyna Chińska jest moją pasją, którą stale rozwijam.
                         Nieustannie pogłębiam swoją wiedzę na
-                        kursach i szkoleniach.</h3>
+                        kursach i szkoleniach.
+                    <img src="dist/img/icon/quote-aboutme-small.png" alt="" class="aboutme__quote-icon">
+                    </h3>
                     </div>
                 </div>
                 <img src="dist/img/aboutme-small.png" alt="" class="aboutme__my-img-small">
