--- a/index.html
+++ b/index.html
@@ -144,6 +144,7 @@
                         Nieustannie pogłębiam swoją wiedzę na
                         kursach i szkoleniach.
                     <img src="dist/img/icon/quote-aboutme-small.png" alt="" class="aboutme__quote-icon">
+                    <img src="dist/img/icon/quote-aboutme-big.png" alt="" class="aboutme__quote-icon-big">
                     </h3>
                     </div>
                 </div>
