--- a/index.html
+++ b/index.html
@@ -406,11 +406,26 @@
                         Akupunktura  to metoda  wywodząca się ze wschodu  (Chiny, Japonia, Mongolia), sięga ona bardzo odległych czasów i bazuje na naturalnych prawach przyrody. Prawa te wyrażane są jako yin i yang oraz 5 elementów. Akupunktura służy do przywracania równowagi energetycznej organizmu.  Równowaga ta jest warunkiem sprawnego funkcjonowania ciała, a w efekcie daje poprawę zdrowia i samopoczucia. Akupunktura wzmacnia naturalną siłę i odporność  przez co umożliwia organizmowi powrót do zdrowia. Wpływa na poprawę samopoczucia fizycznego, psychicznego i emocjonalnego. Korzyści ze stosowania akupunktury są szerokie, daje ona uczucie spokoju i odprężenia lub poczucie wzrostu poziomu energii. Akupunktura jest pomocna w wielu dolegliwościach, takich jak np. uciążliwe migreny, zawroty głowy, różnego rodzaju zespołu bólowe czy stany przewlekłego zmęczenia. Akupunktura może pozytywnie wpłynąć na krążenie w ciele i funkcjonowanie systemu immunologicznego, a także poprawić wygląd skóry i owalu  twarzy (zabiegi akupunktury kosmetycznej). Akupunktura polega na nakłuwaniu ciała sterylnymi, jednorazowymi igłami w odpowiednie punkty  zwane punktami akupunktury. Punkty te zlokalizowane są na ciele wzdłuż tzw. meridianów (linii energetycznych). 
                     </p>
                 </div>
+
+
                 <div class="offer__acupuncture-square offer__acupuncture-square2">
-                    
                 </div>
-                <div class="offer__acupuncture-square offer__acupuncture-square3"></div>
-                <div class="offer__acupuncture-square offer__acupuncture-square4"></div>
+
+
+                <div class="offer__acupuncture-square offer__acupuncture-square3">
+                    <h3 class="h3-title-subsections">Akupunktura klasyczna</h3>
+                    <p class="offer__acupuncture-offer-text">
+                        Akupunktura klasyczna to system, który wspiera organizm w osiągnięciu harmonii i równowagi. Zabiegi mają na celu regulację homeostazy organizmu poprzez usuwanie blokad energetycznych powodowanych przez różne czynniki wewnętrzne i zewnętrzne. Poprzez regulację prawidłowego przepływu życiowej energii akupunktura pozwala organizmowi na naturalną regenerację i powrót do stanu równowagi. System ten jest unikalny, traktuje człowieka holistycznie zwracając uwagę na wszystkie trzy poziomy czyli ciało, umysł i duszę. Akupunktura jest systemem komplementarnym do tradycyjnej medycyny zachodniej.
+                    </p>
+                </div>
+
+
+                <div class="offer__acupuncture-square offer__acupuncture-square4">
+                    <h3 class="h3-title-subsections">Akupunktura brzucha</h3>
+                    <p class="offer__acupuncture-offer-text"></p>
+                        Akupunktura brzucha to mikrosystem w którym określone punkty i obszary brzucha odpowiadają określonym częściom ciała. Zabiegi na brzuchu są praktycznie bezbolesne i przynoszą szybkie rezultaty.
+                    </p>
+                </div>
 
 
 
