--- a/index.html
+++ b/index.html
@@ -664,7 +664,7 @@
 
 
                     <div class="offer__hipocrates-container">
-                        <div class="offer__hippocrates-img"><img src="../dist/img/icon/hipokrates.png" alt="Hipokrates">
+                        <div class="offer__hippocrates-img"><img src="dist/img/icon/hipokrates.png" alt="Hipokrates">
                         </div>
                         <div class="offer__hippocrates-text-box">
                             <p class="offer__hippocrates-text-hippocrates-sentence">„Niech pożywienie będzie twoim
@@ -683,27 +683,27 @@
 
                             <div class="offer__dietetics-icon-items">
                                 <img class="offer__dietetics-icon-items-img"
-                                    src="../dist/img/icon/profilaktyka-zdrowotna.png"
+                                    src="dist/img/icon/profilaktyka-zdrowotna.png"
                                     alt="Dietetyka, profilaktyka-zdrowotna">
                                 <p class="offer__dietetics-icon-items-text">Profilaktyka zdrowonta</p>
                             </div>
 
                             <div class="offer__dietetics-icon-items">
-                                <img class="offer__dietetics-icon-items-img" src="../dist/img/icon/leczenie.png"
+                                <img class="offer__dietetics-icon-items-img" src="dist/img/icon/leczenie.png"
                                     alt="Dietetyka - leczenie">
                                 <p class="offer__dietetics-icon-items-text">Leczenie</p>
                             </div>
 
                             <div class="offer__dietetics-icon-items">
                                 <img class="offer__dietetics-icon-items-img"
-                                    src="../dist/img/icon/terapia-nadwagi-i-otylosci.png"
+                                    src="dist/img/icon/terapia-nadwagi-i-otylosci.png"
                                     alt="Dietetyka - terapia nadwagi i otyłości">
                                 <p class="offer__dietetics-icon-items-text">Terapia nadwagi i otyłości</p>
                             </div>
 
                             <div class="offer__dietetics-icon-items">
                                 <img class="offer__dietetics-icon-items-img"
-                                    src="../dist/img/icon/dobre-samopoczucie.png"
+                                    src="dist/img/icon/dobre-samopoczucie.png"
                                     alt="Dietetyka - dobre samopoczucie, zdrowie">
                                 <p class="offer__dietetics-icon-items-text">Fundament dobrego samopoczucia</p>
                             </div>
