--- a/index.html
+++ b/index.html
@@ -54,6 +54,9 @@
                                 <a href="#dietetics" class="nav__dropdown-menu-offer-items"><li class="nav__dropdown-menu-li">dietetyka</li></a>
                                 <a href="#herbal-medicine" class="nav__dropdown-menu-offer-items"><li class="nav__dropdown-menu-li">ziołolecznictwo</li></a>
                                 <a href="#chinese-medicine" class="nav__dropdown-menu-offer-items"><li class="nav__dropdown-menu-li">medycyna chińska</li></a>
+                                <a href="#massage" class="nav__dropdown-menu-offer-items"><li class="nav__dropdown-menu-li">Masaż gua sha</li></a>
+                                <a href="#chinese-bubbles" class="nav__dropdown-menu-offer-items"><li class="nav__dropdown-menu-li">Bańki chińskie</li></a>
+                                <a href="#heat-therapy" class="nav__dropdown-menu-offer-items"><li class="nav__dropdown-menu-li">Moksowanie / Terapia ciepłem</li></a>
                                 <a href="#trainings" target="_blank" class="nav__dropdown-menu-offer-items"><li class="nav__dropdown-menu-li">szkolenia<img src="dist/img/icon/external-link.png" alt="" class="nav__external-link-icon"></li></a>
                             </ul>
                         </div>
@@ -86,14 +89,17 @@
                 </ul>
             </div>
             <div class="nav__mobile-menu-container-offer-submenu">
+                <button class="nav__mobile-menu-items-back-btn"><img src="dist/img/icon/back-btn.png" alt="" class="nav__back-icon">Wstecz</button>
                 <ul class="nav__mobile-menu-items submenu-UL-items">
                     <a href="#acupuncture" class="nav__mobile-menu-link"><li class="nav__mobile-menu-items-content-submenu submenu-LI-link1">Akupunktura</li></a>
                     <a href="#dietetics" class="nav__mobile-menu-link"><li class="nav__mobile-menu-items-content-submenu submenu-LI-link2">Dietetyka</li></a>
                     <a href="#herbal-medicine" class="nav__mobile-menu-link"><li class="nav__mobile-menu-items-content-submenu submenu-LI-link3">Ziołolecznictwo</li></a>
                     <a href="#chinese-medicine" class="nav__mobile-menu-link"><li class="nav__mobile-menu-items-content-submenu submenu-LI-link4">Medycyna Chińska</li></a>
+                    <a href="#massage" class="nav__mobile-menu-link"><li class="nav__mobile-menu-items-content-submenu submenu-LI-link4">Masaż gua sha</li></a>
+                    <a href="#chinese-bubbles" class="nav__mobile-menu-link"><li class="nav__mobile-menu-items-content-submenu submenu-LI-link4">bańki chińskie</li></a>
+                    <a href="#heat-therapy" class="nav__mobile-menu-link"><li class="nav__mobile-menu-items-content-submenu submenu-LI-link4">Moksowanie / Terapia ciepłem</li></a>
                     <a href="#trainings" class="nav__mobile-menu-link" target="_blank"><li class="nav__mobile-menu-items-content-submenu submenu-LI-link5">Szkolenia <img src="dist/img/icon/external-link.png" alt="" class="nav__external-link-icon"></li></a>
                 </ul>
-                <button class="nav__mobile-menu-items-back-btn"><img src="dist/img/icon/back-btn.png" alt="" class="nav__back-icon">Wstecz</button>
             </div>
         </div>
     </nav>
@@ -682,34 +688,31 @@
 
 
                             <div class="offer__dietetics-icon-items">
-                                <img class="offer__dietetics-icon-items-img"
-                                    src="dist/img/icon/profilaktyka-zdrowotna.png"
-                                    alt="Dietetyka, profilaktyka-zdrowotna">
+                                <img src="dist/img/icon/profilaktyka-zdrowotna.png"
+                                    alt="Dietetyka, profilaktyka-zdrowotna" class="offer__dietetics-icon-items-img">
                                 <p class="offer__dietetics-icon-items-text">Profilaktyka zdrowonta</p>
                             </div>
 
                             <div class="offer__dietetics-icon-items">
-                                <img class="offer__dietetics-icon-items-img" src="dist/img/icon/leczenie.png"
-                                    alt="Dietetyka - leczenie">
+                                <img src="dist/img/icon/leczenie.png"
+                                    alt="Dietetyka - leczenie" class="offer__dietetics-icon-items-img" >
                                 <p class="offer__dietetics-icon-items-text">Leczenie</p>
                             </div>
 
                             <div class="offer__dietetics-icon-items">
-                                <img class="offer__dietetics-icon-items-img"
-                                    src="dist/img/icon/terapia-nadwagi-i-otylosci.png"
-                                    alt="Dietetyka - terapia nadwagi i otyłości">
+                                <img src="dist/img/icon/terapia-nadwagi-i-otylosci.png"
+                                    alt="Dietetyka - terapia nadwagi i otyłości" class="offer__dietetics-icon-items-img">
                                 <p class="offer__dietetics-icon-items-text">Terapia nadwagi i otyłości</p>
                             </div>
 
                             <div class="offer__dietetics-icon-items">
-                                <img class="offer__dietetics-icon-items-img"
-                                    src="dist/img/icon/dobre-samopoczucie.png"
-                                    alt="Dietetyka - dobre samopoczucie, zdrowie">
+                                <img src="dist/img/icon/dobre-samopoczucie.png"
+                                    alt="Dietetyka - dobre samopoczucie, zdrowie" class="offer__dietetics-icon-items-img">
                                 <p class="offer__dietetics-icon-items-text">Fundament dobrego samopoczucia</p>
                             </div>
-
-
                         </div>
+
+
                     </div>
                 </div>
             </div>
@@ -731,12 +734,34 @@
 
 
         <div class="wrapper">
-            <div class="offer__herbal-medicine">
+            <div class="offer__herbal-medicine-container">
                 <div class="offer__herbal-medicine-box" id="herbal-medicine">
                     <h3 class="h3-title-subsections">Ziołolecznictwo</h3>
                     <p class="offer__herbal-medicine-text">
+                        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Hic, autem. Quidem corrupti, officia molestias et quis ut necessitatibus aspernatur veritatis ullam quisquam, voluptatem, optio dolorum repellat alias facilis distinctio obcaecati officiis ducimus? Mollitia in, exercitationem nam adipisci molestias nihil corrupti a reiciendis qui cum deserunt quam rem laudantium perspiciatis dolores ipsa autem itaque voluptas nostrum. Eligendi, ratione! Officiis laboriosam quis ad quibusdam dolor fugit eos excepturi possimus, ullam distinctio fugiat. Ea suscipit, mollitia pariatur magnam optio reprehenderit culpa totam, quisquam nemo quaerat corporis earum placeat dolorem soluta odit enim aspernatur porro hic est rem similique. Laudantium nobis excepturi et ut architecto dolores, velit temporibus optio recusandae placeat quibusdam nisi doloribus incidunt minus facere mollitia dolorem esse, cumque nihil sapiente amet repellat. Nostrum officia a vel, porro laborum qui iure vitae optio deleniti reprehenderit. Nihil vero perspiciatis error tempore expedita inventore eos architecto quisquam earum, dolorum ab ducimus! Sed eligendi quaerat tempora asperiores, quia sint illum tenetur expedita esse consequatur blanditiis odit aperiam voluptatem harum provident incidunt perspiciatis soluta neque quis et ipsam deserunt placeat! Iure deserunt esse autem cupiditate necessitatibus magni, ratione reprehenderit optio molestias maiores recusandae delectus quam ad exercitationem. Dignissimos ex ut obcaecati amet tenetur natus sint assumenda!
+                    </p>
+                </div>
+                <div>
+                    <img src="dist/img/ziołolecznictwo.jpg" class="offer__herbal-medicine-img" alt="Zioła, ziołolecznictwo akupunktura złotów">
+                </div>
+            </div>
+        </div>
+
+
+
+        <div class="wrapper">
+            <div class="offer__chinese-medicine-container">
+                <div>
+                    <img src="dist/img/chinese-medicine.jpg" class="offer__chinese-medicine-img offer__chinese-medicine-img-desktop" alt="Medycyna Chińska - akupunktura złotów">
+                </div>
+                <div class="offer__chinese-medicine-box" id="chinese-medicine">
+                    <h3 class="h3-title-subsections">Medycyna Chińska</h3>
+                    <p class="offer__chinese-medicine-text">
                         Podstawowe zasady Tradycyjnej Medycyny Chińskiej (TCM) wywodzą się z taoistycznej filozofii związanej z yin i yang. Te dwa przeciwstawne bieguny warunkują i wyjaśniają procesy naturalnych zmian i transformacji zachodzące we wszechświecie. Kierując się filozofią taoistyczną „naukowcy związani z naturą” wykorzystali wyniki obserwacji natury u ludzi. Traktowali oni istoty ludzkie jako byty naturalne, będące częścią przyrody, podlegające jej procesom i od tych procesów zależne. Bardzo istotnym elementem TCM jest pojęcie Qi. Chiński symbol Qi składa się z dwóch elementów, jeden z nich oznacza „oddech”, „parę”, a drugi „ziarna”, „ryż”. Pojęcie Qi tłumaczymy jako energię, która jest niezbędna do przebiegu wszystkich procesów życiowych. Kierowanie Qi i dbałość o tę życiową energię stanowi podstawę różnego rodzaju terapii w TCM, takich jak: akupunktura, moksowanie (ogrzewanie), dietetyka, ziołolecznictwo oraz ćwiczenia qi gong i inne. Zasady terapeutyczne Medycyny Chińskiej mają na celu zachowanie lub odnowienie równowagi pomiędzy yin i yang, równowaga pomiędzy tymi aspektami oznacza zdrowie, zaś nierównowaga lub brak harmonii wywołuje chorobę. Z teorią yin i yang ściśle związana jest reguła Pięciu Elementów (pięciu żywiołów),  według której materialną podstawą przyrody są: ogień, ziemia, metal, woda, drzewo.
                     </p>
+                </div>
+                <div>
+                    <img src="dist/img/chinese-medicine.jpg" class="offer__chinese-medicine-img offer__chinese-medicine-img-mobile" alt="Medycyna Chińska - akupunktura złotów">
                 </div>
             </div>
         </div>
