--- a/trainings.html
+++ b/trainings.html
@@ -54,6 +54,9 @@
                                 <a href="#dietetics" class="nav__dropdown-menu-offer-items"><li class="nav__dropdown-menu-li">dietetyka</li></a>
                                 <a href="#herbal-medicine" class="nav__dropdown-menu-offer-items"><li class="nav__dropdown-menu-li">ziołolecznictwo</li></a>
                                 <a href="#chinese-medicine" class="nav__dropdown-menu-offer-items"><li class="nav__dropdown-menu-li">medycyna chińska</li></a>
+                                <a href="#massage" class="nav__dropdown-menu-offer-items"><li class="nav__dropdown-menu-li">Masaż gua sha</li></a>
+                                <a href="#chinese-bubbles" class="nav__dropdown-menu-offer-items"><li class="nav__dropdown-menu-li">Bańki chińskie</li></a>
+                                <a href="#heat-therapy" class="nav__dropdown-menu-offer-items"><li class="nav__dropdown-menu-li">Moksowanie / Terapia ciepłem</li></a>
                                 <a href="#trainings" target="_blank" class="nav__dropdown-menu-offer-items"><li class="nav__dropdown-menu-li">szkolenia<img src="dist/img/icon/external-link.png" alt="" class="nav__external-link-icon"></li></a>
                             </ul>
                         </div>
@@ -86,14 +89,17 @@
                 </ul>
             </div>
             <div class="nav__mobile-menu-container-offer-submenu">
+                <button class="nav__mobile-menu-items-back-btn"><img src="dist/img/icon/back-btn.png" alt="" class="nav__back-icon">Wstecz</button>
                 <ul class="nav__mobile-menu-items submenu-UL-items">
                     <a href="#acupuncture" class="nav__mobile-menu-link"><li class="nav__mobile-menu-items-content-submenu submenu-LI-link1">Akupunktura</li></a>
                     <a href="#dietetics" class="nav__mobile-menu-link"><li class="nav__mobile-menu-items-content-submenu submenu-LI-link2">Dietetyka</li></a>
                     <a href="#herbal-medicine" class="nav__mobile-menu-link"><li class="nav__mobile-menu-items-content-submenu submenu-LI-link3">Ziołolecznictwo</li></a>
                     <a href="#chinese-medicine" class="nav__mobile-menu-link"><li class="nav__mobile-menu-items-content-submenu submenu-LI-link4">Medycyna Chińska</li></a>
+                    <a href="#massage" class="nav__mobile-menu-link"><li class="nav__mobile-menu-items-content-submenu submenu-LI-link4">Masaż gua sha</li></a>
+                    <a href="#chinese-bubbles" class="nav__mobile-menu-link"><li class="nav__mobile-menu-items-content-submenu submenu-LI-link4">bańki chińskie</li></a>
+                    <a href="#heat-therapy" class="nav__mobile-menu-link"><li class="nav__mobile-menu-items-content-submenu submenu-LI-link4">Moksowanie / Terapia ciepłem</li></a>
                     <a href="#trainings" class="nav__mobile-menu-link" target="_blank"><li class="nav__mobile-menu-items-content-submenu submenu-LI-link5">Szkolenia <img src="dist/img/icon/external-link.png" alt="" class="nav__external-link-icon"></li></a>
                 </ul>
-                <button class="nav__mobile-menu-items-back-btn"><img src="dist/img/icon/back-btn.png" alt="" class="nav__back-icon">Wstecz</button>
             </div>
         </div>
     </nav>
